After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 124975 - crash if you move cell to another workbook, close workbook, undo
crash if you move cell to another workbook, close workbook, undo
Status: RESOLVED FIXED
Product: Gnumeric
Classification: Applications
Component: General
1.2.x
Other Linux
: High major
: ---
Assigned To: Jody Goldberg
Jody Goldberg
Depends on:
Blocks:
 
 
Reported: 2003-10-19 15:58 UTC by Jacob Burckhardt
Modified: 2004-12-22 21:47 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Jacob Burckhardt 2003-10-19 15:58:35 UTC
Start gnumeric
Enter =a2
Now the current cell is a2
Type control-X
In the File menu, choose New
Type control-V
Switch to the first gnumeric window
In the File menu choose Close
When it asks if you want to save changes, click Discard
Now there is only one gnumeric window.  In that window, click undo
It crashes and says:

** (gnumeric:583): CRITICAL **: file ../../src/sheet.c: line 3350
(sheet_move_range): assertion `IS_SHEET (rinfo->target_sheet)' failed

** (gnumeric:583): CRITICAL **: file ../../src/sheet.c: line 775
(sheet_cell_get): assertion `IS_SHEET (sheet)' failed

** (gnumeric:583): CRITICAL **: file ../../src/sheet.c: line 4064
(sheet_get_view): assertion `IS_SHEET (sheet)' failed

This happened in gnumeric 1.2.1
Comment 1 Morten Welinder 2003-10-19 16:30:25 UTC
Confirmed.
Comment 2 Jody Goldberg 2003-10-20 15:21:24 UTC
Fixing this for real is out of the scope of 1.2.  We need to revamp
external depenencies for real to make things happy.

For now I'll just patch it to avoid the crash.  However, I worry about
what will happen in situations where the we delete the content the 2nd
sheet then delete the original sheet.  Undo there will screw us.