http://bugzilla.gnome.org/show_bug.cgi?id=124975 handle undo for paste

2003-10-20  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=124975
	* src/commands.c (CmdPasteCut) : handle undo for paste from a deleted
	  external sheet.  Only fixes first order problem.  We'll need a more
	  invasive approach later.